src/objects/GP_Lista_de_Asset__c.object
<CustomObject>
    <description>Assets del Socio - Gestor de Puntos</description>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>GP Lista de Assets</relationshipLabel>
        <relationshipName>GP_Lista_de_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MSISDN__c</fullName>
        <formula>Asset__r.MSISDN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSISDN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puntos_acumulados_mes_0__c</fullName>
        <label>Puntos acumulados mes 0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntos_acumulados_mes_1__c</fullName>
        <label>Puntos acumulados mes 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntos_acumulados_mes_2__c</fullName>
        <label>Puntos acumulados mes 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Socio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Socio</label>
        <referenceTo>GP_Socio__c</referenceTo>
        <relationshipLabel>GP Lista de Assets</relationshipLabel>
        <relationshipName>GP_Lista_de_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Puntos_Acumulados__c</fullName>
        <label>Total Puntos Acumulados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>suscriber_id__c</fullName>
        <formula>Asset__r.Subscription_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>suscriber id</label>
        <type>Text</type>
    </fields>
    <label>GP Lista de Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Lista de Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>